--- a/Makefile-CSIL
+++ b/Makefile-CSIL
@@ -3,7 +3,7 @@
 
 # Please put here the path of directory that conatins "mpicc" and "mpirun".
 # To know how to install OpenMPI, refer to the class website.
-MPI_PREFIX = ~/local/bin/
+MPI_PREFIX = ~tyang_class/local/bin/
 NUM_PROC = 2 
 CC      = gcc
 MPICC   = $(MPI_PREFIX)mpicc
